Fixed bug with vertical positioning of the configuration jquery dialog by wrapping the settingsDialogDiv.html into another div element structure.
Also updated the moodleActivityViewer.user.js file with a new version number, which was omitted from last commit.

--- a/gmdocs/settingsDialogDiv.html
+++ b/gmdocs/settingsDialogDiv.html
@@ -1,4 +1,4 @@
-<div id="MAVsettingsDiv" title="Moodle Activity Viewer Settings" style="display:none">
+<div><div id="MAVsettingsDiv" title="Moodle Activity Viewer Settings" style="display:none">
 	<form id="MAVsettingsForm" name="settingsFormForm">
 		<h2 id="MAVHeadingType">Activity Type</h2>
 		<div>
@@ -70,4 +70,5 @@
 			</fieldset>
         </div>
 	</form>
+</div>
 </div>
