Added a scale legend with the heatmap colour ranges to the moodle page when in heatmap mode.

--- a/gmdocs/settingsDialogDiv.html
+++ b/gmdocs/settingsDialogDiv.html
@@ -72,3 +72,20 @@
 	</form>
 </div>
 </div>
+<div id="fixedColourLegend" style="display:none;">
+				<p>
+                	Colour scale: 
+                    <span class="mavColour0 mavColourLegend">&nbsp;</span>
+                    <span class="mavColour1 mavColourLegend">&nbsp;</span>
+                    <span class="mavColour2 mavColourLegend">&nbsp;</span>
+                    <span class="mavColour3 mavColourLegend">&nbsp;</span>
+                    <span class="mavColour4 mavColourLegend">&nbsp;</span>
+                    <span class="mavColour5 mavColourLegend">&nbsp;</span>
+                    <span class="mavColour6 mavColourLegend">&nbsp;</span>
+                    <span class="mavColour7 mavColourLegend">&nbsp;</span>
+                    <span class="mavColour8 mavColourLegend">&nbsp;</span>
+                    <span class="mavColour9 mavColourLegend">&nbsp;</span>
+                    <span class="mavColour10 mavColourLegend">&nbsp;</span>
+                    Example: <a class="mavColour0" href="#">Least</a> <a class="mavColour5" href="#">Moderate</a> <a class="mavColour10" href="#">Most</a>
+                </p>
+</div>
