Added self update feature to MAV
Simplified the colour scale for MAV

--- a/gmdocs/settingsDialogDiv.html
+++ b/gmdocs/settingsDialogDiv.html
@@ -72,20 +72,39 @@
 	</form>
 </div>
 </div>
-<div id="fixedColourLegend" style="display:none;">
-				<p>
-                	Colour scale: 
-                    <span class="mavColour0 mavColourLegend">&nbsp;</span>
-                    <span class="mavColour1 mavColourLegend">&nbsp;</span>
-                    <span class="mavColour2 mavColourLegend">&nbsp;</span>
-                    <span class="mavColour3 mavColourLegend">&nbsp;</span>
-                    <span class="mavColour4 mavColourLegend">&nbsp;</span>
-                    <span class="mavColour5 mavColourLegend">&nbsp;</span>
-                    <span class="mavColour6 mavColourLegend">&nbsp;</span>
-                    <span class="mavColour7 mavColourLegend">&nbsp;</span>
-                    <span class="mavColour8 mavColourLegend">&nbsp;</span>
-                    <span class="mavColour9 mavColourLegend">&nbsp;</span>
-                    <span class="mavColour10 mavColourLegend">&nbsp;</span>
-                    Example: <a class="mavColour0" href="#">Least</a> <a class="mavColour5" href="#">Moderate</a> <a class="mavColour10" href="#">Most</a>
-                </p>
+<div>
+	
+    <div id="fixedStudentDetails" style="display:none;">
+    
+    </div>
+
+	<div id="fixedColourLegend" style="display:none;">
+					<p>
+										<span style="font-weight:normal;">Scale:</span> <span style="padding-left:22px;">Least </span> 
+											<span class="mavColour0 mavColourLegend">&nbsp;</span>
+											<span class="mavColour1 mavColourLegend">&nbsp;</span>
+											<span class="mavColour2 mavColourLegend">&nbsp;</span>
+											<span class="mavColour3 mavColourLegend">&nbsp;</span>
+											<span class="mavColour4 mavColourLegend">&nbsp;</span>
+											<span class="mavColour5 mavColourLegend">&nbsp;</span>
+											<span class="mavColour6 mavColourLegend">&nbsp;</span>
+											<span class="mavColour7 mavColourLegend">&nbsp;</span>
+											<span class="mavColour8 mavColourLegend">&nbsp;</span>
+											<span class="mavColour9 mavColourLegend">&nbsp;</span>
+											<span class="mavColour10 mavColourLegend">&nbsp;</span> Most
+									</p>
+	</div>
+	<div id="MAVselfUpdateDialog" style="display:none;">
+	
+		<p style="margin-top: 15px;">A new update for Moodle Activity Viewer (MAV) is available.</p>
+		<p>Updating takes only seconds and you do <strong>not</strong> need to restart your browser.</p>
+		<p><strong>Complete the following simple steps to update.</strong></p>
+		<ol>
+			<li>Click the green Install button below.</li>
+			<li>Next you will be asked by Greasemonkey to install Moodle Activity Viewer as shown in the image below - just click the <i>Install</i> button.</li>
+			<img id="MAVselfUpdateDialogImage" alt="The GreeseMonkey install dialog" src="images/MAV_install-sm.png" />
+		</ol>
+<!--		<p>If you wish to update now, click the Install button below, after which you will be asked by Greasemonkey to install Moodle Activity Viewer update as shown in the image below - just click the Install button.</p> -->
+		<p>That&apos;s all there is to it!</p>
+	</div>
 </div>
