Removed timeframe from the settings dialog as not implemented yet.
Removed from html and also removed bindings for the select all and select none buttons in the javascript.

--- a/gmdocs/settingsDialogDiv.html
+++ b/gmdocs/settingsDialogDiv.html
@@ -12,7 +12,9 @@
 				<p class="MAVTypeExample">Discussion forum</p>
 			</fieldset>
 		</div>
-		<h2 id="MAVHeadingTimeframe">Timeframe</h2>
+<!-- Removed timeframe code for now - also commented out related jquery in initAccordion function in moodleActivityViewer.user.js
+
+	<h2 id="MAVHeadingTimeframe">Timeframe</h2>
 		<div>
 			<p>Please select activity from the following weeks of term:</p>
 			<p class="columns" id="MAVTimeframeData">
@@ -31,6 +33,7 @@
             </p>
 			<p><input type="button" id="timeframe_selectall" value="Select All Weeks"/>&nbsp;&nbsp;<input type="button" id="timeframe_selectnone" value="Select No Weeks"/></p>
 		</div>
+-->
 		<h2 id="MAVHeadingGroups">Student Groups</h2>
 		<div>
 			<p>Please select activity from the follow student groups:</p>
