Added ability to identify students who have and havent accessed resources and activities
Added ability to nudge students who have and havent accessed resources and activities using CQU's EASI CONNECT

Updated the install page with new CQU look and feel.

Fixed a bug where if there aren't any groups in the course, it will default to all students (rather than throwing an error no student groups selected)

Now that the number of students or number of clicks shown next to each link is in itself a separate link (which will display who), count links that have the CQU custom style 'buttons' would also appear as a button.  css has been added to override this specific to CQU

Added README file

Added LICENSE file

--- a/gmdocs/settingsDialogDiv.html
+++ b/gmdocs/settingsDialogDiv.html
@@ -110,4 +110,12 @@
 <!--		<p>If you wish to update now, click the Install button below, after which you will be asked by Greasemonkey to install Moodle Activity Viewer update as shown in the image below - just click the Install button.</p> -->
 		<p>That&apos;s all there is to it!</p>
 	</div>
+	<div id="MAVstudentActivityDialog" style="display:none;">
+		<div id="MAVstudentActivityTab">
+			<h2><span class="ui-icon ui-icon-circle-close"></span>Not Accessed</h2>
+			<div id="studentNoActivityList"></div>
+			<h2><span class="ui-icon ui-icon-circle-check"></span>Accessed</h2>
+			<div id="studentActivityList"></div>
+		</div>
+	</div>
 </div>
